# android-wallet

./: .gitignore  LICENSE  Privacy  Privacy Policy for XDAG Android Wallet_24092022.docx  README.md  build.gradle  config.json  crowdin.yml  gradle.properties  settings.gradle  update.json
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: libxdag_jni.cpp
app/src/main/cpp/openssl/crypto/: cversion.c
app/src/main/cpp/openssl/crypto/aes/: aes_wrap.c
app/src/main/cpp/openssl/crypto/asn1/: a_gentm.c
app/src/main/cpp/openssl/crypto/evp/: e_aes_cbc_hmac_sha1.c
app/src/main/cpp/openssl/include/openssl/: opensslconf.h
app/src/main/cpp/openssl/ssl/: s3_cbc.c  s3_srvr.c  ssl_cert.c
app/src/main/cpp/xdaglib/client/: address.c  address.h  block.c  block.h  crypt.c  crypt.h  hash.h  log.c  log.h  memory.c  memory.h  netdb.c  netdb.h  pool.c  pool.h  sha256.h  state.h  storage.c  storage.h  sync.c  sync.h  system.h  transport.c  transport.h  version.h  wallet.c  wallet.h  xdagmain.c  xdagmain.h
app/src/main/cpp/xdaglib/client/utils/: uint256.c  utils.c  utils.h
app/src/main/cpp/xdaglib/dnet/: dnet_command.c  dnet_connection.h  dnet_crypt.c  dnet_crypt.h  dnet_database.c  dnet_database.h  dnet_files.h  dnet_history.h  dnet_log.c  dnet_log.h  dnet_main.c  dnet_main.h  dnet_packet.c  dnet_packet.h  dnet_stream.h  dnet_tap.h  dnet_threads.h  dthread.h  system.h
app/src/main/cpp/xdaglib/dus/: crc_c.c  dfslib_random.c  dfslib_random.h  dfslib_string.c  dfsrsa.c
app/src/main/cpp/xdaglib/ldus/: atomic.h  list.h  rbtree.h
app/src/main/cpp/xdaglib/wrapper/: xdagwrapper.c  xdagwrapper.h
app/src/main/java/io/xdag/xdagwallet/: App.java  Config.java  HomeActivity.java  MainActivity.java  SplashActivity.java  WalletActivity.java
app/src/main/java/io/xdag/xdagwallet/activity/: AboutActivity.java  BaseActivity.java  CreateWalletActivity.java  MnemonicBackupActivity.java  PoolListActivity.java  RestoreActivity.java  SettingActivity.java  SplashActivity.java  TranDetailActivity.java  UsageActivity.java  UseExplainActivity.java  VerifyMnemonicBackupActivity.java  WalletActivity.java  WalletBackupActivity.java
app/src/main/java/io/xdag/xdagwallet/adapter/: TransactionAdapter.java  VerifyBackupMnemonicWordsAdapter.java  VerifyBackupSelectedMnemonicWordsAdapter.java
app/src/main/java/io/xdag/xdagwallet/api/: Api.java  ApiServer.java  NoTransactionException.java  UpdateApi.java  XdagScanApi.java  XdagScanServer.java
app/src/main/java/io/xdag/xdagwallet/config/: Config.java  Constants.java  XdagConfig.java
app/src/main/java/io/xdag/xdagwallet/core/: Address.java  Block.java  BlockBuilder.java  BlockInfo.java  XdagBlock.java  XdagField.java
app/src/main/java/io/xdag/xdagwallet/crypto/: Aes.java  Base58.java  Bip32ECKeyPair.java  ECDSASignature.java  ECKeyPair.java  Hash.java  Keys.java  MnemonicUtils.java  SecureRandomUtils.java  Sign.java  SimpleDecoder.java  SimpleEncoder.java
app/src/main/java/io/xdag/xdagwallet/dialog/: InputBuilder.java  InputDialog.java  InputPwdDialogFragment.java  LoadingBuilder.java  LoadingDialog.java  OnlyTipBuilder.java  SetPwdDialogFragment.java  TipBuilder.java
app/src/main/java/io/xdag/xdagwallet/fragment/: AuthDialogFragment.java  BaseMainFragment.java  HomeFragment.java  MainFragment.java  MoreFragment.java  ReceiveFragment.java  SendFragment.java  SettingFragment.java
app/src/main/java/io/xdag/xdagwallet/model/: BlockDetailModel.java  ConfigModel.java  PoolListModel.java  PoolModel.java  TransactionModel.java  UpdateModel.java  VersionModel.java
app/src/main/java/io/xdag/xdagwallet/net/: ApiServer.java  ErrorConsumer.java  HttpRequest.java  NoTransactionException.java
app/src/main/java/io/xdag/xdagwallet/rpc/: RpcManager.java  TransactionList.java  Web3XdagFactory.java  WebXdag.java
app/src/main/java/io/xdag/xdagwallet/util/: AlertUtil.java  Assertions.java  BackupUtils.java  (+18 more)
app/src/main/res/color/: selector_navigation.xml
app/src/main/res/drawable/: bg_shape_btn.xml  bg_start.xml  ic__back.xml  ic_action_pool.xml  ic_add.xml  ic_arrow_right.xml  ic_back.xml  ic_home.xml  ic_input.xml  ic_more.xml  ic_output.xml  ic_pool_selected.xml  ic_qrcode.xml  ic_receive.xml  ic_scan.xml  ic_send.xml  ic_setting.xml  pic_empty.xml  pic_loading.xml  shape_btn_update.xml  splash_window.xml
app/src/main/res/layout/: activity_create_wallet.xml  activity_home.xml  activity_main.xml  activity_mnemonic_backup.xml  activity_poollist.xml  activity_restore.xml  activity_setting.xml  activity_splash.xml  activity_tran_detail.xml  activity_use_explain.xml  activity_verify_mnemonic_backup.xml  activity_wallet.xml  activity_wallet_backup.xml  common_progress_view.xml  common_toolbar.xml  common_toolbar_with_txbtn.xml  dialog_authentication.xml  dialog_input_pwd.xml  dialog_input_pwd2.xml  dialog_item_checkbox.xml  dialog_mnmonic.xml  dialog_set_pwd.xml  dialog_show_message.xml  fragment_home.xml  fragment_more.xml  fragment_receive.xml  fragment_send.xml  fragment_setting.xml  item_pool.xml  item_transaction.xml  layout_dialog_input.xml  layout_dialog_loading.xml  layout_page_intro.xml  view_empty.xml  view_more_item.xml  view_setting_item.xml
app/src/main/res/menu/: navigation_items.xml  toolbar_pool.xml  toolbar_scan.xml
app/src/main/res/values/: attr.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-el/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-vi/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
(+154 files in other folders)
